--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <article id="profile1" class="card">
         <figure>
           <img
-            src="/Revesion/CSS_Revision/css-revision-2/img/IMG_20221006_091540_791.jpg"
+            src="./Revesion/CSS_Revision/css-revision-2/img/IMG_20221006_091540_791.jpg"
             alt="Shivansh Srivastava"
             width="500"
             height="500"
@@ -33,7 +33,7 @@
       <article id="profile2" class="card">
         <figure>
           <img
-            src="/Revesion/CSS_Revision/css-revision-2/img/IMG20231203202910tt.jpg"
+            src="./Revesion/CSS_Revision/css-revision-2/img/IMG20231203202910tt.jpg"
             alt="Satyam Yadav"
             width="500"
             height="500"
@@ -46,7 +46,7 @@
       <article id="profile3" class="card">
         <figure>
           <img
-            src="/Revesion/CSS_Revision/css-revision-2/img/IMG20231203203808.jpg"
+            src="./Revesion/CSS_Revision/css-revision-2/img/IMG20231203203808.jpg"
             alt="Subodh Srivastava"
             width="500"
             height="500"
