--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <article id="profile2" class="card">
         <figure>
           <img
-            src="./Revesion/CSS_Revision/css-revision-2/img/IMG20231203202910tt.jpg"
+            src="./img/IMG20231203202910tt.jpg "
             alt="Satyam Yadav"
             width="500"
             height="500"
@@ -46,7 +46,7 @@
       <article id="profile3" class="card">
         <figure>
           <img
-            src="./img/IMG20231203202910tt.jpg"
+            src="./img/IMG20231203203808.jpg"
             alt="Subodh Srivastava"
             width="500"
             height="500"
