--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width="500"
             height="500"
           />
-          <figcaption>Shivansh Srivastav</figcaption>
+          <figcaption>Shivansh Srivastava</figcaption>
         </figure>
         <p><q>I code stuff.</q></p>
       </article>
